--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=7002
-DATABASE_URI=mongodb://srv1/2025_328300124_project
+DATABASE_URI=mongodb://localhost:27017/db
 ACCESS_TOKEN_SECRET=mysecretpassword
