--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 PORT=7002
-DATABASE_URI=mongodb://srv1/2025_328300124_project
+DATABASE_URI=mongodb://127.0.0.1:27017/project
 ACCESS_TOKEN_SECRET=mysecretpassword
+
